--- a/css/colors.css
+++ b/css/colors.css
@@ -1,11 +1,12 @@
 body {
 	background: #eeeeee;
 	font-family: cursive;
+    background-image: url("http://wallpaperlayer.com/img/2015/1/blurred-wallpaper-background-7591-7884-hd-wallpapers.jpg");
 }
 
 .container {
-	width: 600px;
-	height: 500px;
+	/*width: 600px;
+	height: 500px;*/
 	margin: 20px auto;
 	background-color: #fff;
 	padding: 10px 50px 50px 50px;
@@ -15,11 +16,9 @@ body {
 }
 
 .container h1 {
-	background: #405CA1;
-	color: #fff;
-	font-size: 60px;
+	color: gray;
+	font-size: 6vh;
 	text-align: center;
-	padding: 2px 0 13px 0;
 	border-radius: 50px;
 }
 
@@ -55,4 +54,8 @@ body {
 #progress {
 	color: #2b2b2b;
 	font-size: 18px;
+}
+
+div img{
+    width: 35vh;
 }
